# open-db-studio

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  generate_test_data.py  index.html  metadata.json  package-lock.json  package.json  test_data.sql  translate.js  vite.config.ts  wsl-start-ibus.sh  wsl-start.sh
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.wsl.conf.json
src-tauri/assets/: AGENTS.md  AGENTS_EXPLAIN.md  AGENTS_OPTIMIZE.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/skills/db-read/: SKILL.md
src-tauri/skills/echarts-ai-skill/: SKILL.md  package-lock.json
src-tauri/skills/graph-read/: SKILL.md
src-tauri/skills/history/: SKILL.md
src-tauri/skills/metric-edit/: SKILL.md
src-tauri/skills/metric-read/: SKILL.md
src-tauri/skills/tab-control/: SKILL.md
src-tauri/skills/table-edit/: SKILL.md
src-tauri/src/: commands.rs  crypto.rs  error.rs  lib.rs  main.rs  skill_sync.rs  state.rs
src-tauri/src/acp/: client.rs  config.rs  mod.rs  session.rs
src-tauri/src/agent/: client.rs  config.rs  mod.rs  server.rs  stream.rs
src-tauri/src/datasource/: bulk_write.rs  clickhouse.rs  db2.rs  gaussdb.rs  mod.rs  mysql.rs  oracle.rs  pool_cache.rs  postgres.rs  sqlite.rs  sqlserver.rs  utils.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src-tauri/src/er/: commands.rs  constraint.rs  ddl_generator.rs  diff_engine.rs  export.rs  mod.rs  models.rs  repository.rs  table_sorter.rs
src-tauri/src/graph/: builder.rs  cache.rs  change_detector.rs  comment_parser.rs  event_processor.rs  layout.rs  mod.rs  query.rs  traversal.rs
src-tauri/src/llm/: client.rs  inline_complete.rs  mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/mcp/tools/: db_read.rs  fs_history.rs  fs_metric.rs  fs_seatunnel.rs  fs_table.rs  history.rs  metric_edit.rs  mod.rs  seatunnel.rs  tab_control.rs  table_edit.rs
src-tauri/src/metrics/: ai_draft.rs  crud.rs  mod.rs
src-tauri/src/migration/: byte_gate.rs  data_pump.rs  ddl_convert.rs  direct_transfer.rs  e2e_test.rs  mig_commands.rs  mod.rs  native_row.rs  pipeline.rs  precheck.rs  repository.rs  splitter.rs  strategy_selector.rs  task_mgr.rs
src-tauri/src/migration/lang/: ast.rs  mod.rs  (+4 more)
src-tauri/src/pipeline/: context_builder.rs  entity_extract.rs  mod.rs  sql_validator.rs
src-tauri/src/seatunnel/: client.rs  commands.rs
src-tauri/tests/: bigint_u_binding_test.rs  memory_analysis.rs  memory_detailed_test.rs  memory_real_analysis.rs  migration_perf_standalone.rs  migration_perf_test.rs  pipeline_channel_test.rs
(+533 files in other folders)
