[package]
name = "open-db-studio"
version = "0.1.0"
description = "AI-Native Database Client"
authors = []
edition = "2021"
rust-version = "1.77"

[lib]
name = "open_db_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "open-db-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
