[package]
name = "open-db-studio"
version = "0.1.0"
description = "AI-Native Database Client"
authors = []
edition = "2021"
rust-version = "1.77"

[lib]
name = "open_db_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "open-db-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# 内置 SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# 外部数据源（MySQL + PostgreSQL）
sqlx = { version = "0.8", features = [
  "runtime-tokio-native-tls",
  "mysql",
  "postgres",
  "json",
  "chrono",
  "rust_decimal",
] }
rust_decimal = "1"

# HTTP 客户端（LLM 代理）
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# 错误处理
thiserror = "1"
anyhow = "1"

# 异步 trait
async-trait = "0.1"

# 日志
log = "0.4"
env_logger = "0.11"

# 加密（连接密码）
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# 时间
chrono = { version = "0.4", features = ["serde"] }

# SQL Server 驱动
tiberius = { version = "0.12", features = ["tds73", "winauth"] }
tokio-util = { version = "0.7", features = ["compat"] }

# PNG 解码（用于运行时设置窗口图标）
image = { version = "0.25", default-features = false, features = ["png"] }

# 其他
lru = "0.12"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"

# ZIP 打包（多表导出）
zip = { version = "2", features = [] }

# ACP 协议客户端（连接 opencode agent）
agent-client-protocol = "0.10.2"

# MCP HTTP Server（暴露数据库工具给 opencode）
axum = { version = "0.7", features = ["http1", "json"] }
tower = "0.4"

# Oracle 驱动（可选，需要 Oracle Instant Client）
[target.'cfg(target_os = "windows")'.dependencies]
oracle = { version = "0.6", optional = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
oracle-driver = ["oracle"]
